--- a/Site Spotify/css/estilo.css
+++ b/Site Spotify/css/estilo.css
@@ -5,6 +5,7 @@
 
 html, body {
     height: 100%;
+    overflow-x: hidden;
 }
 
 #home {
@@ -16,7 +17,10 @@ body {
                 url(../imagens/ruido.png),
                 linear-gradient(50deg,#ff4169,#7c26f8);
     background-attachment: fixed;
+    font-family: Helvetica, Arial, sans-serif;
 }
+
+
 
 
 nav.navbar-transparente {
@@ -45,4 +49,133 @@ nav.navbar-transparente {
 
 .capa {
     text-align: center;
+}
+
+.btn-custom {
+    color: white;
+    border-radius: 500px;
+    -webkit-border-radius: 500px;
+    -moz-border-radius: 500px;
+    text-transform: uppercase;
+    transition: background 0.4s, color 0.4s;
+    padding: 10px 20px;
+}
+
+.btn-roxo {
+    background: #7c25f8;
+}
+
+.btn-roxo:hover {
+    background: #6207e3;
+    color: white;
+}
+
+.btn-branco {
+    border: 2px solid white;
+}
+
+.btn-branco:hover {
+    background-color: white;
+    color: black;
+}
+
+h1 {
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    margin-bottom: 50px;
+    color: white;
+}
+
+h2 {
+    font-size: 3em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+
+h3 {
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+
+#servicos {
+    background: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#servicos h2, h3 {
+    color: #7c25f8;
+}
+
+#recursos {
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#recursos h3 {
+    color: #9bf0e1;
+}
+
+#recursos h2 {
+    color: white;
+}
+
+.albuns {
+    padding: 10px 0px;
+}
+
+.rotacionar {
+    -ms-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+    padding-left: 80px;
+}
+
+/* Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) { 
+    .btn-custom {
+        margin: 10px 15px; 
+        border-radius: 400px;
+        -webkit-border-radius: 400px;
+        -moz-border-radius: 400px;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    h1 {
+        font-size: 3em;
+    }
+    .btn-custom {
+        margin: 10px 15px;
+        border-radius: 400px;
+        -webkit-border-radius: 400px;
+        -moz-border-radius: 400px;
+    }
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    h1 {
+        font-size: 4em;
+    }
+    .btn-custom {
+        margin: 10px 15px;
+    }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199.98px) {  
+    h1 {
+        font-size: 5em;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { 
+    h1 {
+        font-size: 6em;
+    }
 }
