--- a/Site Spotify/css/estilo.css
+++ b/Site Spotify/css/estilo.css
@@ -164,6 +164,10 @@ footer ul li {
     margin: 0 5px;
 }
 
+.carousel-control-next, .carousel-control-prev {
+    width: 5%;
+}
+
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
     .btn-custom {
